# geospatial-prediction

./: .env.validator_template  .gitignore  LICENSE  MEMORY_MONITORING.md  MIGRATION_GUIDE.md  MINER_PERFORMANCE_STATS_ENHANCEMENT_PLAN.md  README.md  SCORING_SYSTEM.md  alembic_miner.ini  alembic_validator.ini  check_smap_quality.py  constraints.txt  migration_output.txt  miner_template.env  profile_validator.sh  proxy_docs.txt  requirements.in  requirements.txt  requirements_r2.txt  runtime_weight_tracer.py  setup.cfg  setup_proxy_server.sh  test_comprehensive_db_setup.py  test_memory_monitor.py  test_validator_memory_monitor.py  validator_template.env
alembic_migrations_miner/: env.py
alembic_migrations_miner/versions/: 15952c9da69b_comprehensive_miner_schema_convergence.py  7a8b3c9d4e5f_add_runpod_job_id.py  d2eed138f834_add_input_batch_pickle_path_to_weather_.py  d5694f31dd48_initial_miner_schema_separate_config.py
alembic_migrations_validator/: env.py
alembic_migrations_validator/versions/: 2e00df6800b9_comprehensive_validator_schema_.py  3704fd24c76d_add_indexes_for_performance.py  60f644a55d7e_add_unique_constraint_to_soil_moisture_.py  7819e940673d_add_weather_scoring_jobs_table_for_.py  7cc0a0cb963c_add_miner_performance_stats_table.py  8d832ba6c04d_enhance_miner_performance_stats_with_.py  (+6 more)
docs/: MINER.md  VALIDATOR.md  weather_miner_setup.md  weather_task_protocol_reference.md
gaia/: __init__.py
gaia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gaia/APIcalls/: miner_score_sender.py  (+1 more)
scripts/: setup.py  validator_monitor.py  wipe_r2_bucket.py
(+130 files in other folders)
