[metadata]
name = gaia
version = 1.2.0
database_version = 1.0.3
author = geardici, oneandahalfcats, qucat, gabby
organization = Nickel5
description = This project implements the Gaia subnet for Bittensor
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt





